RESOLVED FIXED170462
WasmBench asserts in debug jsc
https://bugs.webkit.org/show_bug.cgi?id=170462
Summary WasmBench asserts in debug jsc
Filip Pizlo
Reported 2017-04-04 12:06:53 PDT
ASSERTION FAILED: !plan->hasWork() /Volumes/Data/quinary/OpenSource/Source/JavaScriptCore/wasm/WasmWorklist.cpp(118) : virtual WTF::AutomaticThread::WorkResult JSC::Wasm::Worklist::Thread::work() 1 0x10e2c5e6d WTFCrash 2 0x10d207eee JSC::Wasm::Worklist::Thread::work() 3 0x10e2d3f47 WTF::AutomaticThread::start(WTF::AbstractLocker const&)::$_0::operator()() const 4 0x10e2d3ced void std::__1::__invoke_void_return_wrapper<void>::__call<WTF::AutomaticThread::start(WTF::AbstractLocker const&)::$_0&>(WTF::AutomaticThread::start(WTF::AbstractLocker const&)::$_0&&&) 5 0x10e2d3a89 std::__1::__function::__func<WTF::AutomaticThread::start(WTF::AbstractLocker const&)::$_0, std::__1::allocator<WTF::AutomaticThread::start(WTF::AbstractLocker const&)::$_0>, void ()>::operator()() 6 0x10d802f1a std::__1::function<void ()>::operator()() const 7 0x10e33a0a7 WTF::threadEntryPoint(void*) 8 0x10e33bc81 WTF::wtfThreadEntryPoint(void*) 9 0x7fff9ea0faab _pthread_body 10 0x7fff9ea0f9f7 _pthread_body 11 0x7fff9ea0f1fd thread_start Segmentation fault: 11
Attachments
Patch (1.48 KB, patch)
2017-04-04 15:15 PDT, Keith Miller
saam: review+
Radar WebKit Bug Importer
Comment 1 2017-04-04 12:10:56 PDT
Keith Miller
Comment 2 2017-04-04 15:13:28 PDT
*** Bug 170476 has been marked as a duplicate of this bug. ***
Keith Miller
Comment 3 2017-04-04 15:15:46 PDT
Keith Miller
Comment 4 2017-04-04 15:19:47 PDT
Note You need to log in before you can comment on or make changes to this bug.