WasmBench asserts in debug jsc https://bugs.webkit.org/show_bug.cgi?id=170462

Reviewed by Saam Barati.

The assertion should have been an if.

* wasm/WasmWorklist.cpp:

Canonical link: https://commits.webkit.org/187388@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214904 268f45cc-cd09-0410-ab3c-d52691b4dbfc